force-app/main/default/objects/Contact/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UserName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>