force-app/main/default/objects/Contact/fields/UsName__c.field-meta.xml
<CustomField>
    <fullName>UsName__c</fullName>
    <formula>User__r.FirstName &amp;&apos; &apos;&amp; User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UsName</label>
    <type>Text</type>
</CustomField>